--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
 
 .card p {
   font-size: 14px;
-  color: #777;
+  color: #8a8d94;
 }
 
 .card a {
@@ -50,5 +50,5 @@
   border: 1px solid #ccc;
   border-radius: 30px;
   text-decoration: none;
-  color: #333;
+  color: #fff;
 }
